--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"contentful": "^9.2.17"
+	}
 }
